tody all changes pushe

--- a/src/app/pages/funds/add-funds/add-funds.component.html
+++ b/src/app/pages/funds/add-funds/add-funds.component.html
@@ -1,4 +1,4 @@
-<section class="stox-card">
+<section class="container stox-card">
     <h1 class="text-center stox-title">Add Funds</h1>
     <ng-container>
         <form class="row g-3 mb-3" [formGroup]="AddFundsGroup" (ngSubmit)="save()">
