--- a/src/app/pages/funds/withdrawal/withdrawal.component.html
+++ b/src/app/pages/funds/withdrawal/withdrawal.component.html
@@ -1,4 +1,4 @@
-<section class="stox-card">
+<section class="container stox-card">
     <h1 class="text-center stox-title">Fund Withdrawal</h1>
     <ng-container>
         <form class="" [formGroup]="WithdrawalGroup" (ngSubmit)="save()">
