--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -224,8 +224,8 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
           <li class="dropdown-header">
-            <h6>Kevin Anderson</h6>
-            <span>Web Designer</span>
+            <h6>{{LoginUsername}}</h6>
+            <!-- <span>Web Designer</span> -->
           </li>
           <li>
             <hr class="dropdown-divider">
