--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -177,9 +177,9 @@
                             <div class="tab-pane fade mt-3" id="bank-details" role="tabpanel"
                                 aria-labelledby="bank-details-tab">
                                 <div class="row">
-                                    <ng-container *ngIf="profileData && profileData.BankDetail">
+                                    <ng-container *ngIf="BankDetail">
                                         <div class="col col-md-9 col-lg-7 col-xl-5"
-                                            *ngFor="let bank of profileData.BankDetail;let i = index">
+                                            *ngFor="let bank of BankDetail;let i = index">
                                             <div class="card" style="border-radius: 15px; background-color: #f6f9ff;">
                                                 <div class="card-body p-4 text-black">
                                                     <div>
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                         <div class="text-end">
-                            <button class="btn btn-primary" type="submit">Save changes</button>
+                            <button class="btn btn-primary" type="submit" (click)="saveAllChanges()">Save changes</button>
                         </div>
                     </form>
                 </div>
